--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.6'
     compile 'org.projectlombok:lombok:1.16.20'
 
+    testCompile 'org.assertj:assertj-core:3.9.0'
+    testCompile 'com.google.guava:guava:23.6-jre'
     testCompile 'junit:junit:4.12'
 }
 
